2006-07-15  Brian Warner  <warner@lothar.com>

	* buildbot/twcompat.py (_which): fix some epydoc issues
	* buildbot/status/html.py (Waterfall.__init__): same

2006-06-29  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py: get Interface from b.twcompat to hush
	deprecation warnings under newer Twisteds (by using
	zope.interface.Interface instead of old twisted.python.components
	stuff)
	* buildbot/slave/interfaces.py: same

2006-06-28  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (SVN): add --non-interactive to all
	svn commands, so it will fail immediately instead of hanging while
	it waits for a username/password to be typed in.

	* buildbot/slave/bot.py (SlaveBuilder.commandComplete): add minor
	log message if the step was shut down

	* buildbot/scripts/runner.py (SlaveOptions.longdesc): remove
	obsolete reference to mktap.

2006-06-20  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_steps.py (BuildStep.testShellCommand1): update
	test to include new 'logfiles' argument sent from master to slave

2006-06-19  Brian Warner  <warner@lothar.com>

	* buildbot/process/step_twisted.py (Trial): track Progress from
	_trial_temp/test.log too

	* buildbot/process/step.py (OutputProgressObserver): generalize
	the earlier StdioProgressObserver into an OutputProgressObserver
	that can track LogFiles other than stdio.
	(LoggingBuildStep.__init__): same

	* buildbot/process/step_twisted.py (Trial): use logfiles= to track
	_trial_temp/test.log, not a separate 'cat' command. TODO: this
	will fail under windows because of os.sep issues. It might have
	worked before if 'cat' was doing cygwin path conversion.

	* buildbot/slave/commands.py (LogFileWatcher.__init__): note the
	creation of LogFileWatchers
	(ShellCommand._startCommand): and record the files that were
	watched in the 'headers' section of the ShellCommand output

	* buildbot/process/step.py (RemoteShellCommand.__init__): duh, you